# NoobBoy

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
bootrom/src/: noobboy.asm
include/: cartridge.h  gb.h  joypad.h  mbc.h  mmu.h  registers.h  status.h
src/: Cpu.cpp  Ext_Instructions.cpp  GB.cpp  Gpu.cpp  Instructions.cpp  Interrupt.cpp  Memory.cpp  Memory.h  Registers.cpp  Registers.h  Renderer.cpp  Timer.cpp  apu.cpp  apu.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  debug_renderer.cpp  ext_Instructions.cpp  gb.cpp  gb.h  gpu.h  instructions.cpp  instructions.h  interrupt.cpp  interrupt.h  joypad.cpp  joypad.h  keys.h  main.cpp  mbc.cpp  mbc.h  mmu.cpp  mmu.h  ppu.cpp  ppu.h  registers.cpp  registers.h  renderer.cpp  (+4 more)
